# AHI

./: .gitmodules  ChangeLog  Makefile.in  README  TODO  _clang-format  build_AHI_OS3.sh  build_externals.sh  config.h.in  configure  configure.in  squirt.sh  version.date
ahi/ahisrc/tags/SNAPSHOT_990113/: configure  configure.in
ahi/ahisrc/tags/SNAPSHOT_990113/AHI/: Makefile.in  ahi.c  ahiprefs_Cat.h  gui.h  gui_ca.c  gui_mui.c  support.h  version.date
ahi/ahisrc/tags/SNAPSHOT_990113/AHI/translations/: deutsch.ct  français.ct  nederlands.ct  norsk.ct  português.ct  srpski.ct  suomi.ct  ÃeÓtina.ct
ahi/ahisrc/tags/SNAPSHOT_990113/Device/: Makefile.in  ahi.cd  ahi.ct  asmfuncs.h  database.c  database.h  devcommands.c  devsupp.h  devsupp.s  dsp.h  dspecho_68k.s  effectinit.c  effectinit.h  header.c  mixer.h  version.date
ahi/ahisrc/tags/SNAPSHOT_990113/Docs/: ahidev.texinfo  ahiusr.texinfo
ahi/ahisrc/trunk/: ChangeLog  Makefile.in  README  README.ATO  TODO  acconfig.h  config.h.in  configure  configure.in  version.date
ahi/ahisrc/trunk/AHI/: Makefile.in  ahi.c  ahi.h  ahiprefs.cd  ahiprefs.ct  ahiprefs_Cat.c  ahiprefs_Cat.h  gui.h  gui_bgui.c  gui_mui.c  smakefile  support.c  support.h  version.date
ahi/ahisrc/trunk/AHI-Handler/: Makefile.in  main.c
ahi/ahisrc/trunk/AHI/translations/: dansk.ct  deutsch.ct  español.ct  français.ct  hrvatski.ct  italiano.ct  magyar.ct  nederlands.ct  norsk.ct  polski.ct  português.ct  russian.ct  srpski.ct  suomi.ct  svenska.ct
ahi/ahisrc/trunk/AddAudioModes/: AddAudioModes.c  Makefile.in  configure  smakefile
ahi/ahisrc/trunk/Classes/: ClassHierarchy.dot  Makefile.in
ahi/ahisrc/trunk/Classes/AHI/: Makefile.in  ahiclass.h  errors.c  errors.h  main.c  methods.c  methods.h
ahi/ahisrc/trunk/Classes/AdderProcessor/: ahiclass.h  main.c  methods.c  methods.h
ahi/ahisrc/trunk/Classes/Board/: ahiclass.h  main.c  methods.c
ahi/ahisrc/trunk/Classes/Buffer/: Makefile.in  ahiclass.h  main.c  methods.c  methods.h
ahi/ahisrc/trunk/Classes/Common/: Makefile.common.in  boopsi.c  boopsi.h  boopsi.sfd  util.c  util.h
ahi/ahisrc/trunk/Classes/Driver/: ahiclass.h  main.c  methods.c  methods.h
ahi/ahisrc/trunk/Classes/GainProcessor/: ahiclass.h  main.c  methods.c  methods.h
ahi/ahisrc/trunk/Classes/LFO/: Makefile.in  ahiclass.h  main.c  methods.c
ahi/ahisrc/trunk/Classes/MyProcessor/: Makefile.in  ahiclass.h  main.c  methods.c
ahi/ahisrc/trunk/Classes/Output/: Makefile.in  ahiclass.h  main.c  methods.c  methods.h
ahi/ahisrc/trunk/Classes/Processor/: Makefile.in  ahiclass.h  main.c  methods.c
ahi/ahisrc/trunk/Classes/ResamplerProcessor/: Makefile.in  main.c  methods.c
ahi/ahisrc/trunk/Classes/SplitterProcessor/: main.c  methods.c
ahi/ahisrc/trunk/Classes/TickProcessor/: Makefile.in  ahiclass.h  main.c  methods.c
ahi/ahisrc/trunk/Classes/test/: test.c
ahi/ahisrc/trunk/Device/: C_c_AHI.sd  C_h_AHI.sd  Makefile.in  addroutines.h  addroutines_32bit.c  addroutines_68k.s  addroutines_hifi.c  addroutines_lofi.c  addroutines_ppc.s  addtest.c  ahi.cd  ahi.ct  ahi.device_rev.rev  ahi_def.h  ahi_def.i  ahi_device.h  ahi_internal_lib.sfd  asmfuncs.h  asmfuncs.s  audioctrl.c  audioctrl.h  database.c  database.h  debug.c  debug.h  devcommands.c  devcommands.h  device.c  device.h  devsupp.c  devsupp.h  devsupp.s  dsp.h  dsp.i  dspecho.c  dspecho.h  dspecho_68k.s  dspechofuncs.c  effectinit.c  effectinit.h  (+29 more)
ahi/ahisrc/trunk/Device/translations/: dansk.ct  deutsch.ct  español.ct  français.ct  hrvatski.ct  italiano.ct  magyar.ct  nederlands.ct  norsk.ct  polski.ct  russian.ct  srpski.ct  svenska.ct  ÃeÓtina.ct
ahi/ahisrc/trunk/Docs/: Makefile.in  ahi_v7.sgml  ahidev.texinfo  ahiusr.texinfo  readme.main  readme.man  readme.usr  smakefile
ahi/ahisrc/trunk/Drivers/: MODE_ID  Makefile.in
ahi/ahisrc/trunk/Drivers/AROS/: aros-main.c  aros-playslave.c
ahi/ahisrc/trunk/Drivers/Common/: DriverBase.h  MODEFILE.s  Makefile.common.in  lib.sfd  library.c  library.h
ahi/ahisrc/trunk/Drivers/Device/: DriverData.h  device-main.c  device-playslave.c
ahi/ahisrc/trunk/Drivers/EMU10kx/: DriverData.h  EMU10KX.s  EMU10kx.h  Makefile.in  efxmgr.h  emu10kx-camd.c  emu10kx-init.c  emu10kx-interrupt.h  emu10kx-main.c  emu10kx-misc.c  emu10kx-misc.h  emu10kx.c  hwaccess.c  hwaccess.h  linuxsupport.c  linuxsupport.h  main.c  version.date  voicemgr.c
ahi/ahisrc/trunk/Drivers/EMU10kx/CAMD/: emu10kx.c
ahi/ahisrc/trunk/Drivers/Filesave/: filesave-playslave.c  filesave.c
ahi/ahisrc/trunk/Drivers/Paula/: smakefile
ahi/ahisrc/trunk/Drivers/Toccata/: smakefile  toccata.c
ahi/ahisrc/trunk/Drivers/Void/: Makefile.in  lib_protos.h  library.h  version.date
ahi/ahisrc/trunk/Examples/: Makefile.in
ahi/ahisrc/trunk/Include/: Makefile.in
ahi/ahisrc/trunk/Include/SFD/: ahi_sub_lib.sfd
ahi/ahisrc/trunk/Toccata/: slaveproc.c  smakefile  toccata.c
(+935 files in other folders)
